# Password-Manager-App

./: .gitignore  README.md
dokumentaatio/: tuntikirjanpito.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: teht1.drawio  teht2.drawio
pwmanager-app/: .coveragerc  .gitignore  .pylintrc  pyproject.toml  tasks.py
pwmanager-app/data/: database.sqlite
pwmanager-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
pwmanager-app/src/: app.py  consoleIO.py  console_io.py  database_connection.py  initialize_database.py  main.py  user_service.py  usermanager.py
pwmanager-app/src/entities/: password.py  user.py
pwmanager-app/src/repositories/: password_repository.py  user_repository.py
pwmanager-app/src/services/: encryption_service.py  password_service.py  user_service.py
pwmanager-app/src/tests/: encryption_service_test.py  password_repository_test.py  password_service_test.py  user_repository_test.py  user_service_test.py  usermanager_test.py
pwmanager-app/src/ui/: create_account_view.py  login_view.py  passwords_view.py  ui.py
