[tool.poetry]
name = "pwmanager-app"
version = "0.1.0"
description = ""
authors = ["oskari83 <oskpelto@gmail.com>"]
readme = "README.md"
packages = [{include = "pwmanager_app"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
