[tool.poetry]
name = "pwmanager-app"
version = "0.1.0"
description = ""
authors = ["oskari83 <oskpelto@gmail.com>"]
readme = "README.md"
packages = [{include = "pwmanager_app"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"
sv-ttk = "^2.4"
ttkthemes = "^3.2.2"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
