[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = ["oskari83 <oskpelto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
